@@ -1,3 +1,4 @@
+* Add wizard to show views
 * Switched from .csv to .po for translations
 * Search on Many2One fields include inactive records
 * Change select on fields into Boolean
